fix(web-components): updates z-index values for components
adds a base z-index value that is used to calculate z-index of all elements

--- a/packages/web-components/src/components/ic-menu/ic-menu.css
+++ b/packages/web-components/src/components/ic-menu/ic-menu.css
@@ -1,5 +1,9 @@
 @import "../../global/normalize.css";
 
+/**
+ * @prop --ic-z-index-menu: z-index of menu
+ */
+
 @media (prefers-reduced-motion: no-preference) {
   :host([open]) .menu {
     transition: max-height var(--ic-transition-duration-slow);
@@ -13,7 +17,7 @@
   color: var(--ic-color-primary-text);
   background-color: var(--ic-architectural-white);
   position: relative;
-  z-index: var(--ic-z-index-popup-menu);
+  z-index: var(--ic-z-index-menu);
   box-sizing: border-box;
   box-shadow: var(--ic-elevation-overlay);
 }
