--- a/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
+++ b/packages/web-components/src/components/ic-navigation-group/ic-navigation-group.css
@@ -1,5 +1,9 @@
 @import "../../global/normalize.css";
 
+/**
+ * @prop --ic-z-index-navigation-item: z-index of navigation group item
+ */
+
 :host {
   display: block;
 }
@@ -83,7 +87,7 @@
   box-shadow: var(--ic-border-focus);
   border-radius: var(--ic-border-radius);
   outline: var(--ic-hc-focus-outline);
-  z-index: 1;
+  z-index: var(--ic-z-index-navigation-item);
   transition: box-shadow var(--ic-easing-transition-fast);
 }
 
@@ -130,7 +134,7 @@
   right: 0;
   padding: var(--ic-space-xs) var(--ic-space-md);
   box-shadow: 0 0.375rem 0.5rem -0.375rem rgba(0 0 0 / 20%);
-  z-index: var(--ic-z-index-overlay);
+  z-index: calc(var(--ic-z-index-navigation-item) - 1);
 }
 
 :host .navigation-group-dropdown-items-list {
